<resources>
    <string name="app_name">켁켁이</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_hint">Tenochtitlan is the hint</string>
    <string name="source_hint">Codex is the source</string>
    <string name="home_start">start</string>
    <string name="home_performance">성과</string>
    <string name="home_test">중독 테스트</string>
    <string name="home_test_detail">중독테스트를 실시해보세요!</string>
    <string name="home_motivation">동기부여</string>
    <string name="home_keep">keep</string>
    <string name="home_day_description">금연한 지</string>
    <string name="home_cigarette_description">피우지\n않은 담배</string>
    <string name="home_save_money_description">돈 절약</string>
    <string name="home_life_description">생명 되찾음</string>
    <string name="menu_home">홈</string>
    <string name="menu_community">커뮤니티</string>
    <string name="menu_mypage">마이페이지</string>
    <string name="popular_post">인기 포스트</string>
    <string name="my_writing">내가 쓴 글</string>
    <string name="my_comments">내가 쓴 댓글</string>
    <string name="bookmark">북마크</string>
    <string name="achievement">업적</string>
    <string name="category">카테고리</string>
    <string name="notice">공지사항</string>
    <string name="test_description">한국어판 니코틴 의존도 설문 도구\n(Fagerstrom Tolerance Questionnaire)\n에 의거하여 작성된 담배 중독 검사입니다.</string>
    <string name="test_title">담배 중독 검사</string>
    <string name="test_start">테스트 시작하기</string>
    <string name="question_sub_text">대략적으로 알려주세요.</string>
    <string name="question1_title">하루에 담배를 몇 개비 정도 피우십니까?</string>
    <string name="question1_answer1">15 개비 이하</string>
    <string name="question1_answer2">16 ∼ 25개비</string>
    <string name="question1_answer3">26 개비 이상</string>
    <string name="question2_title">귀하가 피우는 담배의 니코틴 함량은 어느 정도입니까?</string>
    <string name="question2_answer1">낮다</string>
    <string name="question2_answer2">중간 정도</string>
    <string name="question2_answer3">높다</string>
    <string name="question3_title">얼마나 자주 담배 연기를 깊이 들이마십니까?</string>
    <string name="question3_answer1">들이마시지 않는다</string>
    <string name="question3_answer2">가끔</string>
    <string name="question3_answer3">항상</string>
    <string name="question4_title">귀하는 아침 나절에 피우는 담배가 나머지 시간에 피우는 담배보다 많습니까?</string>
    <string name="question4_answer1">아니요</string>
    <string name="question4_answer2">잘 모르겠음</string>
    <string name="question4_answer3">예</string>
    <string name="question5_title">귀하는 하루의 첫 담배를 아침 기상 후 언제 피우십니까?</string>
    <string name="question5_answer1">30분 이내</string>
    <string name="question5_answer2">잘 모르겠음</string>
    <string name="question5_answer3">30분 이후</string>
    <string name="question6_title">하루에 언제 피우는 담배가 가장 만족스럽습니까?</string>
    <string name="question6_answer1">잘 모르겠음</string>
    <string name="question6_answer2">그 외</string>
    <string name="question6_answer3">아침 첫 담배</string>
    <string name="question7_title">귀하는 금연장소에서도 담배 피우기를 참기가 어렵습니까?</string>
    <string name="question7_answer1">아니요</string>
    <string name="question7_answer2">잘 모르겠음</string>
    <string name="question7_answer3">예</string>
    <string name="question8_title">귀하는 몸이 불편해서 누워 쉴 때에도 담배를 피우십니까?</string>
    <string name="question8_answer1">아니요</string>
    <string name="question8_answer2">잘 모르겠음</string>
    <string name="question8_answer3">예</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="test_result_title">테스트 결과</string>
    <string name="test_result_ok">확인</string>
    <string name="post_add_comment">댓글을 남겨주세요.</string>
    <string name="comment_like">좋아요</string>
    <string name="comment_recomment">대댓글</string>
    <string name="floatingActionButton_community">글쓰기</string>
    <string name="post_write_cancel">취소</string>
    <string name="post_write_register">등록</string>
    <string name="post_write_title">제목을 입력해 주세요.</string>
    <string name="post_write_content">내용을 입력해 주세요.\n에티켓을 준수해 유용한 공간을 만들어요😊</string>
    <string name="post_notification_channel_id">게시글 알림</string>
    <string name="comment_notification_channel_name">댓글 알림</string>
    <string name="notification_elapsed_year">년 전</string>
    <string name="notification_elapsed_month">개월 전</string>
    <string name="notification_elapsed_week">주 전</string>
    <string name="notification_elapsed_day">일 전</string>
    <string name="notification_elapsed_hour">시간 전</string>
    <string name="notification_elapsed_minute">분 전</string>
    <string name="notification_elapsed_second">초 전</string>
    <string name="login_other_btn"><u>다른 방법으로 이용하기</u></string>
    <string name="login_google">Google로 이용하기</string>
    <string name="login_kakao">카카오로 이용하기</string>
    <string name="login_default_nickname">킥킥이</string>
    <string name="tv_my_post_title">내가 쓴 글</string>
    <string name="my_comment_title">내가 쓴 댓글</string>
    <string name="setting_title">설정</string>
    <string name="setting_profile_edit">내 계정 수정하기</string>
    <string name="setting_version">현재 버전 2.0.51</string>
    <string name="user_profile_post">작성한 글</string>
    <string name="user_profile_comment">작성한 댓글</string>
    <string name="user_profile_achievements">업적</string>
    <string name="userprofile_following">팔로잉</string>
    <string name="userprofile_follower">팔로워</string>
    <string name="achievement_app_bar_title">업적</string>
    <string name="achievement_total_quit_smoking_day">총 금연 일수</string>
    <string name="achievment_attain">달성한 업적</string>
    <string name="custom_license_title">오픈 소스 고지</string>
    <string name="setting_profile_title">설정</string>
    <string name="setting_profile_nickname">닉네임</string>
    <string name="setting_profile_birth">생년월일</string>
    <string name="setting_profile_introduction">소개글</string>
    <string name="profile_show_setting">프로필 공개 설정</string>
    <string name="tv_profile_show_setting_detail">선택하면 다른 사람에게 프로필을 공개합니다.</string>
    <string name="setting_log_out">로그아웃</string>
    <string name="setting_service_out">서비스 계정 탈퇴</string>
    <string name="setting_language_english">English</string>
    <string name="setting_language_korean">한글</string>
    <string name="community_category_notice">공지사항</string>
    <string name="community_category_quit_smoking_support">금연 지원 프로그램 공지</string>
    <string name="community_category_popular">인기글</string>
    <string name="community_category_quit_smoking_aids_reviews">금연 보조제 후기</string>
    <string name="community_category_success_stories">금연 성공 후기</string>
    <string name="community_category_general_discussion">자유 게시판</string>
    <string name="community_category_failure_stories">금연 실패 후기</string>
    <string name="community_category_resolutions">금연 다짐</string>
    <string name="community_category_unknown">알 수 없는 에러</string>
    <string name="community_category_all">전체</string>
    <string name="search_recommend_keyword">님을 위한 추천 검색어</string>
    <string name="search_guest_recommend_keyword">당신을 위한 추천 검색어</string>
    <string name="error_server_etc_title">앗, 문제가 생겼어요!</string>
    <string name="error_server_etc_description">켁켁이를 이용하는 도중 문제가 발생했습니다.\n 잠시 후 다시 시도해주세요.</string>
    <string name="error_missing_title">앗, 페이지가 존재하지 않아요!</string>
    <string name="error_missing_description">존재하지 않는 페이지로 접근했어요.\n 뒤로가기를 클릭해주세요.</string>
    <string name="post_view_reply_more">대댓글 %d개 더보기</string>
    <string name="settings_user_profile_with_draw_fail_message">정보를 처리하는 과정에서 오류가 발생하였습니다.</string>
    <string name="post_detail_post_delete_title">게시글 삭제</string>
    <string name="post_detail_post_delete_description">게시글을 삭제하겠습니까?</string>
    <string name="post_detail_post_delete_positive">삭제</string>
    <string name="post_detail_post_delete_negative">취소</string>
    <string name="post_detail_post_delete_toast">게시글이 삭제되었습니다.</string>
    <string name="post_detail_comment_delete_title">댓글 삭제</string>
    <string name="post_detail_comment_delete_description">댓글을 삭제하겠습니까?</string>
    <string name="post_detail_comment_delete_positive">삭제</string>
    <string name="post_detail_comment_delete_negative">취소</string>
    <string name="post_detail_reply_delete_title">대댓글 삭제</string>
    <string name="post_detail_reply_delete_description">대댓글을 삭제하겠습니까?</string>
    <string name="post_detail_reply_delete_positive">삭제</string>
    <string name="post_detail_reply_delete_negative">취소</string>
</resources>